# seed_r7_ros_pkg

./: README.md
seed_r7_arm_typea_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
seed_r7_arm_typea_moveit_config/config/: SEED-Arm-Mover-typeA.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
seed_r7_arm_typea_moveit_config/launch/: SEED-Arm-Mover-typeA_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
seed_r7_bringup/config/: elecom-holonomic.config.yaml  ps4-holonomic.config.yaml
seed_r7_bringup/launch/: display.launch  moveit.launch  seed_r7_bringup.launch
seed_r7_bringup/scripts/: make_udev_install.py
seed_r7_description/arm_typeA/: arm-upper.urdf.xacro  arm.urdf  arm.urdf.xacro
seed_r7_description/csv/typeC_arm/: elbow_p.csv  shoulder_p.csv  wrist_p.csv  wrist_r.csv
seed_r7_description/meshes/typeA_arm/: forearm.dae  upperarm.dae
seed_r7_description/typec_arm/: arm-upper.urdf.xacro  arm.urdf  arm.urdf.xacro
seed_r7_description/typef/: noid.urdf.xacro
seed_r7_description/urdf/: gazebo.xacro
seed_r7_gazebo/: CMakeLists.txt  package.xml
seed_r7_gazebo/config/: gazebo_controller_pids.yaml  gazebo_controller_settings.yaml
seed_r7_gazebo/launch/: seed_r7_empty_world.launch  seed_r7_thk_world.launch
seed_r7_moveit_config/seed_r7_moveit_config/: package.xml
seed_r7_moveit_config/seed_r7_typec_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
seed_r7_moveit_config/seed_r7_typef_moveit_config/: .setup_assistant  package.xml
seed_r7_robot_interface/: CMakeLists.txt  package.xml
seed_r7_robot_interface/include/: seed_r7_lower_controller.h
seed_r7_robot_interface/src/: seed_r7_lower_controller.cpp  stroke_converter.cpp
seed_r7_robot_interface/typec_arm/: plugin_description.xml
seed_r7_ros_controller/: CMakeLists.txt
seed_r7_ros_controller/include/: seed_r7_led_controller.h  seed_r7_robot_hardware.h
seed_r7_ros_controller/src/: seed_r7_led_controller.cpp  seed_r7_lower_controller.cpp  seed_r7_robot_hardware.cpp  seed_r7_ros_controller.cpp
seed_r7_ros_controller/srv/: LEDControl.srv
seed_r7_samples/: CMakeLists.txt
seed_r7_samples/src/: moveit_sample.cpp  pick_and_place.cpp
(+52 files in other folders)
